[package]
name = "mdbook-ezanchor"
version = "0.1.0"
edition = "2024"
description = "mdbook preprocessor for anchor references into source code"
license = "MIT OR Apache-2.0"
rust-version = "1.95.0"
repository = "https://github.com/nikomatsakis/mdbook-ezanchor"

[[bin]]
name = "mdbook-ezanchor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mdbook-preprocessor = "0.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
